--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          pip install pyinstaller firebase_admin
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --noconsole main.py
+          pyinstaller --onefile --noconsole --hidden-import=firebase_admin main.py
 
       - name: Upload EXE as artifact
         uses: actions/upload-artifact@v4
