--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
-          pip install -r requirements.txt  # نصب همه وابستگی‌ها از فایل requirements.txt
+          python -m pip install pyinstaller
+          # اگر requirements.txt وجود داشت، پکیج‌ها را از آن نصب کن
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install firebase-admin PyQt6 jdatetime; fi
 
       - name: Build EXE
         run: |
