--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,32 +16,36 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
+        shell: pwsh  # استفاده از PowerShell برای سازگاری
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyinstaller
-          # اگر requirements.txt وجود داشت، پکیج‌ها را از آن نصب کن
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install firebase-admin PyQt6 jdatetime; fi
+          if (Test-Path "requirements.txt") {
+            pip install -r requirements.txt
+          } else {
+            pip install firebase-admin PyQt6 jdatetime
+          }
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --noconsole --debug all \
-          --hidden-import=firebase_admin \
-          --hidden-import=PyQt6 \
-          --hidden-import=jdatetime \
-          --hidden-import=google.auth \
-          --hidden-import=google.cloud \
-          --hidden-import=google.cloud.firestore \
-          --hidden-import=google.cloud.storage \
-          --hidden-import=google.oauth2 \
-          --hidden-import=PyQt6.QtCore \
-          --hidden-import=PyQt6.QtGui \
-          --hidden-import=PyQt6.QtWidgets \
-          --hidden-import=PyQt6.QtWebEngineWidgets \
-          --hidden-import=PyQt6.QtWebEngineCore \
-          --hidden-import=google.auth.transport.requests \
-          --hidden-import=httpx \
-          --hidden-import=grpc \
-          --hidden-import=cryptography \
+          pyinstaller --onefile --noconsole --debug all `
+          --hidden-import=firebase_admin `
+          --hidden-import=PyQt6 `
+          --hidden-import=jdatetime `
+          --hidden-import=google.auth `
+          --hidden-import=google.cloud `
+          --hidden-import=google.cloud.firestore `
+          --hidden-import=google.cloud.storage `
+          --hidden-import=google.oauth2 `
+          --hidden-import=PyQt6.QtCore `
+          --hidden-import=PyQt6.QtGui `
+          --hidden-import=PyQt6.QtWidgets `
+          --hidden-import=PyQt6.QtWebEngineWidgets `
+          --hidden-import=PyQt6.QtWebEngineCore `
+          --hidden-import=google.auth.transport.requests `
+          --hidden-import=httpx `
+          --hidden-import=grpc `
+          --hidden-import=cryptography `
           main.py
 
       - name: Upload EXE as artifact
